--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     "autoload": {
         "psr-4": { "writecrow\\LoremGutenberg\\": ["src/", "test/"] }
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4"
+    },
     "suggest": {
         "ext-mbstring": "For best performance",
         "symfony/polyfill-mbstring": "If you can't install ext-mbstring"
